fixed main pic alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -70,6 +70,8 @@ h1 {
 .main-img {
     width: 0 auto;
     max-width: 100%;
+    float: right;
+    background-color: black;
 }
 
 #highlight, a:hover {
